--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,10 @@
-// mmkv使用案例
-include 'demo_mmkv:app_mmkv_demo'
-// provider使用案例
+// amap示例
+include ':demo_sdks_third:app_amap_demo'
+// mmkv示例
+include 'demo_sdks_third:app_mmkv_demo'
+// provider示例
 include 'demo_provider:app_provider_client', 'demo_provider:app_provider_provider'
-// aidl使用案例
+// aidl示例
 include 'demo_aidl:app_aidl_client', 'demo_aidl:app_aidl_service'
 
 include ':catface_base', ':app', ':app_base', ':module_apis', ':module_start', ':module_api', ':module_pj_wanandroid', ':module_pj_showapi', ':module_pj_iflytek', ':ctool', ':module_pj_wechat', ':lib_hover_scroll', ':module_view'
