--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,15 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        // jcenter()
+        // Received close_notify during handshake -- fix by change jcenter repository resource
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
+        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
         classpath "com.alibaba:arouter-register:1.0.2"  // ARouter自动加载路由表
     }
 }
@@ -18,7 +21,9 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        // jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         mavenCentral()
         maven { url "https://jitpack.io" }
     }
